--- a/resources/custom/css/home.css
+++ b/resources/custom/css/home.css
@@ -4,7 +4,7 @@
   position: absolute;
   left: 0;
   top: 0;
-  min-height: 675px;
+  bottom: 0;
   height: 100%;
   width: 100%;
   display: table;
